# obj_track_ros

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  REUSE.toml  package.xml  rviz_common_plugins.xml
LICENSES/: MIT.txt
config/: cameras.yaml  config.yaml  mug.yaml  mug_detector.yaml
img/: rviz_screenshot_1.png.license
include/obj_track_ros/: obj_track_panel.hpp  obj_track_ros_node.hpp  ros2_cameras.hpp
launch/: obj_track_ros.launch.py
msg/: TrackResult.msg  TrackedObject.msg  TrackerControl.msg
src/: obj_track_panel.cpp  obj_track_ros_node.cpp  ros2_cameras.cpp
