<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!--
SPDX-FileCopyrightText: 2025 Fabian Wieczorek, German Aerospace Center (DLR)
SPDX-License-Identifier: MIT
-->
<package format="3">
  <name>obj_track_ros</name>
  <version>0.1.0</version>
  <description>ROS 2 camera topic bridge for 3DObjectTracking</description>
  <maintainer email="fabian.wieczorek@dlr.de">wiec_fa</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>pluginlib</depend>
  <depend>rviz_common</depend>
  <depend>cv_bridge</depend>
  <depend>interactive_markers</depend>
  <depend>libglfw3-dev</depend>
  <depend>libglew-dev</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
